# vulnzero-engine

./: .dockerignore  .env.example  .env.production.template  .env.staging.template  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.base  HUMAN_IN_THE_LOOP.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENT_ANALYSIS.md  INSTALLATION_GUIDE.md  LICENSE  MVP_ROADMAP.md  Makefile  NEXT_STEPS.md  NEXT_STEPS_ROADMAP.md  PENDING_ISSUES_REPORT.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE_2_IMPROVEMENTS_REPORT.md  PHASE_4_TESTING_REPORT.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REMEDIATION_PLAN.md  REVIEW_REPORT.md  ROADMAP_TO_PRODUCTION.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  (+14 more)
.github/: CI_CD_GUIDE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  security.yml  tests.yml
.zap/: README.md  zap-api-scan.conf  zap-baseline.conf
alembic/: README  env.py
alembic/versions/: 20241117_initial_schema.py
api/: __init__.py  main.py
api/middleware/: __init__.py  audit.py
api/routes/: __init__.py  auth.py  dashboard.py  deployments.py  metrics.py  monitoring.py  patches.py  vulnerabilities.py  websocket.py
docs/: API.md  DEVELOPMENT.md  EXPLOIT_DATABASE_INTEGRATION.md  OPERATOR_GUIDE_TASK_TRACKING.md  PATCH_GENERATOR.md  PERFORMANCE_OPTIMIZATION.md  TESTING_ROADMAP.md  TODO_TRACKING.md  api-versioning.md  caching-strategies.md  database-optimization.md  distributed-tracing.md  event-driven-architecture.md  phase-7-completion-summary.md  phase5-completion.md  resilience-patterns.md
infrastructure/docker/: Dockerfile.api  Dockerfile.worker  celery-worker.Dockerfile
infrastructure/kubernetes/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
infrastructure/kubernetes/deployments/: api.yaml  celery-beat.yaml  celery-worker.yaml  flower.yaml  frontend.yaml
infrastructure/kubernetes/hpa/: api-hpa.yaml  celery-worker-hpa.yaml  frontend-hpa.yaml
infrastructure/kubernetes/postgres/: service.yaml  statefulset.yaml
infrastructure/kubernetes/redis/: deployment.yaml  service.yaml
infrastructure/kubernetes/services/: api-service.yaml  flower-service.yaml  frontend-service.yaml
infrastructure/prometheus/: prometheus.yml
migrations/: env.py
monitoring/: prometheus.yml
monitoring/alerts/: application.yml  infrastructure.yml
monitoring/grafana/: README.md
monitoring/grafana/dashboards/: application-metrics.json  business-metrics.json  (+6 more)
scripts/: seed_database.py  wait-for-it.sh
services/: README.md  __init__.py
services/aggregator/: Dockerfile  README.md  __init__.py  enrichment.py  main.py  normalizer.py  prioritizer.py  scanner_adapter.py  tasks.py
services/api-gateway/: Dockerfile  auth.py  main.py
services/api_gateway/: __init__.py  main.py
services/deployment-engine/: Dockerfile
services/deployment-orchestrator/: __init__.py
services/deployment_engine/: __init__.py  ansible_runner.py  connection_manager.py  executor.py  main.py  strategies.py  tasks.py
services/deployment_orchestrator/: README.md  __init__.py  main.py
services/digital_twin/: README.md  __init__.py  main.py
services/monitoring/: Dockerfile  README.md  __init__.py  alerts.py  deployment_analytics.py  deployment_monitor.py  main.py  rollback_manager.py  tasks.py
services/patch-generator/: Dockerfile
services/patch_generator/: README.md  __init__.py  generator.py  llm_client.py  main.py  package_managers.py  tasks.py  validator.py
services/testing-engine/: Dockerfile
services/testing_engine/: __init__.py  container_manager.py  executor.py  main.py  state_monitor.py  tasks.py  test_runner.py
shared/: README.md  __init__.py  celery_app.py
shared/api_versioning/: __init__.py  middleware.py  versioning.py
shared/auth/: __init__.py  dependencies.py  jwt.py  password.py
shared/cache/: __init__.py  caching.py  redis_client.py
shared/config/: __init__.py  database.py  settings.py
shared/database/: __init__.py  query_optimization.py  query_optimizer.py
shared/events/: __init__.py  event_bus.py  events.py  handlers.py
shared/health/: __init__.py  checks.py
shared/middleware/: __init__.py  metrics_middleware.py  security_headers.py
shared/models/: __init__.py  asset.py  audit_log.py  base.py  database.py  deployment.py  models.py  patch.py  remediation_job.py  schemas.py  vulnerability.py
shared/monitoring/: __init__.py  metrics.py  sentry_config.py
shared/resilience/: __init__.py  bulkhead.py  circuit_breaker.py  retry.py  timeout.py
shared/tracing/: __init__.py  tracing.py
shared/utils/: __init__.py  error_handling.py  llm_sanitizer.py  response_helpers.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_models.py  test_schemas.py
tests/api/: conftest.py  test_assets.py  test_auth.py  test_deployments.py  test_patches.py  test_system.py  test_vulnerabilities.py
tests/infrastructure/: __init__.py  conftest.py  test_kubernetes_manifests.py  test_monitoring_config.py
tests/integration/: README.md  __init__.py  test_api_gateway.py  test_celery_tasks.py  test_end_to_end.py  test_end_to_end_workflow.py  test_performance.py  test_security_integration.py  test_service_integration.py
tests/load/: README.md  auth.js  comprehensive.js  deployments.js  run-tests.sh  scans.js
tests/performance/: locustfile.py  test_api_performance.py
tests/security/: __init__.py  test_authentication.py  test_llm_sanitizer.py  test_security_headers.py  test_sql_injection.py
tests/unit/: test_config.py  test_cve_fetcher.py  test_models.py  test_patch_generator.py
tests/utils/: __init__.py  assertions.py  factories.py  mocks.py
vulnzero/: cli.py
web/: .dockerignore  .env.example  Dockerfile  INTEGRATION_GUIDE.md  README.md  index.html  nginx.conf  package.json  playwright.config.js  tailwind.config.js  vite.config.js  vitest.config.js
web/src/: App.jsx  main.jsx
(+222 files in other folders)
