[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnzero"
version = "0.1.0"
description = "Autonomous Vulnerability Remediation Platform - Zero-Touch vulnerability patching with AI-powered automation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VulnZero Team", email = "contact@vulnzero.com"}
]
maintainers = [
    {name = "VulnZero Team", email = "contact@vulnzero.com"}
]
keywords = [
    "vulnerability",
    "security",
    "automation",
    "remediation",
    "patching",
    "cybersecurity",
    "ai",
    "machine-learning",
    "devops",
    "infrastructure"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "celery==5.3.4",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "openai==1.3.7",
    "anthropic==0.7.7",
    "requests==2.31.0",
    "docker==6.1.3",
    "ansible==9.0.1",
    "ansible-runner==2.3.4",
    "prometheus-client==0.19.0",
    "python-json-logger==2.0.7",
    "structlog==23.2.0",
    "pandas==2.1.3",
    "scikit-learn==1.3.2",
    "xgboost==2.0.2",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.12.0",
    "pylint==3.0.3",
    "pre-commit==3.5.0",
    "bandit==1.7.5",
    "safety==2.3.5",
]

docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
    "sphinx-autodoc-typehints==1.25.2",
]

all = [
    "vulnzero[dev,docs]",
]

[project.urls]
Homepage = "https://vulnzero.com"
Documentation = "https://docs.vulnzero.com"
Repository = "https://github.com/oness24/vulnzero-engine"
Issues = "https://github.com/oness24/vulnzero-engine/issues"
Changelog = "https://github.com/oness24/vulnzero-engine/blob/main/CHANGELOG.md"

[project.scripts]
vulnzero = "shared.cli:main"

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
  | node_modules
)/
'''

# ============================================================================
# isort Configuration
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/node_modules/*"]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "ansible.*",
    "docker.*",
    "prometheus_client.*",
    "xgboost.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=services",
    "--cov=shared",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "requires_docker: Tests that require Docker",
    "requires_db: Tests that require database",
    "requires_redis: Tests that require Redis",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["services", "shared"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# Pylint Configuration
# ============================================================================
[tool.pylint.main]
py-version = "3.11"
jobs = 0
ignore = ["migrations", "tests"]
ignore-patterns = ["test_.*?.py", "conftest.py"]

[tool.pylint.messages_control]
disable = [
    "C0103", # Invalid name
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function docstring
    "R0903", # Too few public methods
    "R0913", # Too many arguments
    "W0212", # Protected access
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 6
max-branches = 15
max-statements = 60
max-attributes = 15

# ============================================================================
# Bandit Configuration (Security Linting)
# ============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/.venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection warnings in tests

# ============================================================================
# Ruff Configuration (Fast Python Linter - Optional)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "migrations",
    "node_modules",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

# ============================================================================
# Setuptools Configuration
# ============================================================================
[tool.setuptools]
package-dir = {"" = "."}
packages = {find = {where = ["."], include = ["services*", "shared*"]}}

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]

# ============================================================================
# Pre-commit Configuration Reference
# ============================================================================
# Create .pre-commit-config.yaml separately with:
# - black
# - isort
# - flake8
# - mypy
# - bandit
# - trailing-whitespace
# - end-of-file-fixer
# - check-yaml
# - check-json
